basic about layout

--- a/b2bcalc/src/pages/about/about.html
+++ b/b2bcalc/src/pages/about/about.html
@@ -1,11 +1,30 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      O aplikacji
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <h2>B2B Kalkulator FVAT</h2>
+  <p>
+    Aplikacja służy do szybkiego wyliczenia kwoty VAT oraz kosztów możliwych do odliczenia
+    przy prowadzeniu jednoosobowej działalności gospodarczej (B2B)
+  </p>
+
+  <br/>
+
+  <ion-list>
+    <ion-list-header>Written in</ion-list-header>
+    <ion-item>
+      <ion-icon name="ionic" item-left></ion-icon>
+      ionic framework
+    </ion-item>
+    <ion-item>
+      <ion-icon name="angular" item-left></ion-icon>
+      angular 2
+    </ion-item>
+  </ion-list>
 
 </ion-content>
