added angular icon; sass import missing fixed

--- a/b2bcalc/src/pages/about/about.html
+++ b/b2bcalc/src/pages/about/about.html
@@ -22,7 +22,7 @@
       ionic framework
     </ion-item>
     <ion-item>
-      <ion-icon name="angular" item-left></ion-icon>
+      <ion-img class="fvat-icon-img" width="70dp" width="70dp" src="../../assets/img/angular.png"></ion-img>
       angular 2
     </ion-item>
   </ion-list>
