--- a/b2bcalc/src/pages/about/about.html
+++ b/b2bcalc/src/pages/about/about.html
@@ -15,14 +15,17 @@
 
   <br/>
 
-  <ion-list>
-    <ion-list-header>Written in</ion-list-header>
+  <ion-list no-border>
+    <ion-list-header>Technologie:</ion-list-header>
     <ion-item>
       <ion-icon name="ionic" item-left></ion-icon>
       ionic framework
     </ion-item>
     <ion-item>
-      <ion-img class="fvat-icon-img" width="70dp" width="70dp" src="../../assets/img/angular.png"></ion-img>
+      <ion-icon item-left>
+        <ion-img width="70dp" width="70dp" src="../../assets/img/angular.png"> </ion-img>
+      </ion-icon>
+
       angular 2
     </ion-item>
   </ion-list>
