--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -1,17 +1,35 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Kalkulator FVAT na B2B</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <!--<h2>Welcome to Ionic!</h2>-->
+  <h3>
+    Wprowadź kwotę BRUTTO lub NETTO, aby obliczyć VAT i koszty.
+  </h3>
+  <ion-row margin-right="50px" margin-left="50px">
+    <ion-col width-55>
+      <ion-label color="primary">kwota BRUTTO</ion-label>
+    </ion-col>
+    <ion-col width-25>
+      <ion-input placeholder="0.00"></ion-input>
+    </ion-col>
+    <ion-col width-25>
+      <ion-label color="primary">PLN</ion-label>
+    </ion-col>
+  </ion-row>
+
+  <ion-row margin-right="50px" margin-left="50px">
+    <ion-col width-55>
+      <ion-label color="primary">kwota NETTO</ion-label>
+    </ion-col>
+    <ion-col width-25>
+      <ion-input placeholder="0.00"></ion-input>
+    </ion-col>
+    <ion-col width-25>
+      <ion-label color="primary">PLN</ion-label>
+    </ion-col>
+  </ion-row>
 </ion-content>
