--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -10,26 +10,26 @@
     Wprowadź kwotę BRUTTO lub NETTO, aby obliczyć VAT i koszty.
   </h3>
   <ion-row margin-right="50px" margin-left="50px">
-    <ion-col width-55>
-      <ion-label color="primary">kwota BRUTTO</ion-label>
+    <ion-col width-40>
+      <ion-label class="home-table-label" color="primary">kwota BRUTTO</ion-label>
     </ion-col>
-    <ion-col width-25>
-      <ion-input placeholder="0.00"></ion-input>
+    <ion-col width-30>
+      <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
     </ion-col>
-    <ion-col width-25>
-      <ion-label color="primary">PLN</ion-label>
+    <ion-col width-20>
+      <ion-label class="home-table-label" color="primary">PLN</ion-label>
     </ion-col>
   </ion-row>
 
   <ion-row margin-right="50px" margin-left="50px">
-    <ion-col width-55>
-      <ion-label color="primary">kwota NETTO</ion-label>
+    <ion-col width-40>
+      <ion-label class="home-table-label" color="primary">kwota NETTO</ion-label>
     </ion-col>
-    <ion-col width-25>
-      <ion-input placeholder="0.00"></ion-input>
+    <ion-col width-30>
+      <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
     </ion-col>
-    <ion-col width-25>
-      <ion-label color="primary">PLN</ion-label>
+    <ion-col width-20>
+      <ion-label class="home-table-label" color="primary">PLN</ion-label>
     </ion-col>
   </ion-row>
 </ion-content>
