--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -32,4 +32,49 @@
       <ion-label class="home-table-label" color="primary">PLN</ion-label>
     </ion-col>
   </ion-row>
+
+  <ion-row margin-right="50px" margin-left="50px">
+    <ion-col width-40>
+      <ion-label class="home-table-label" color="primary">VAT</ion-label>
+    </ion-col>
+    <ion-col width-30>
+      <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
+    </ion-col>
+    <ion-col width-20>
+      <ion-label class="home-table-label" color="primary">PLN</ion-label>
+    </ion-col>
+  </ion-row>
+
+  <ion-row margin-right="50px" margin-left="50px">
+    <ion-col width-40>
+      <ion-label class="home-table-label" color="primary">koszty</ion-label>
+    </ion-col>
+    <ion-col width-30>
+      <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
+    </ion-col>
+    <ion-col width-20>
+      <ion-label class="home-table-label" color="primary">PLN</ion-label>
+    </ion-col>
+  </ion-row>
+
+  <div class="home-table-profit-row">
+    <ion-row margin-right="50px" margin-left="50px">
+      <ion-col width-40>
+        <ion-label class="home-table-label" color="primary">zysk</ion-label>
+      </ion-col>
+      <ion-col width-30>
+        <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
+      </ion-col>
+      <ion-col width-20>
+        <ion-label class="home-table-label" color="primary">PLN</ion-label>
+      </ion-col>
+    </ion-row>
+  </div>
+
+  <ion-row style="font-size: 30px;" margin-right="50px" margin-left="50px" margin-top="50px">
+    <ion-col>
+        OPCJE
+        <ion-icon name="arrow-down" style="color: red;" margin-left="15px"></ion-icon>
+    </ion-col>
+  </ion-row>
 </ion-content>
