--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -38,7 +38,7 @@
       <ion-label class="home-table-label" color="primary">VAT</ion-label>
     </ion-col>
     <ion-col width-30>
-      <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
+      <ion-input class="home-table-label-input" placeholder="0.00" readonly></ion-input>
     </ion-col>
     <ion-col width-20>
       <ion-label class="home-table-label" color="primary">PLN</ion-label>
@@ -50,7 +50,7 @@
       <ion-label class="home-table-label" color="primary">koszty</ion-label>
     </ion-col>
     <ion-col width-30>
-      <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
+      <ion-input class="home-table-label-input" placeholder="0.00" readonly></ion-input>
     </ion-col>
     <ion-col width-20>
       <ion-label class="home-table-label" color="primary">PLN</ion-label>
@@ -63,7 +63,7 @@
         <ion-label class="home-table-label" color="primary">zysk</ion-label>
       </ion-col>
       <ion-col width-30>
-        <ion-input class="home-table-label-input" placeholder="0.00"></ion-input>
+        <ion-input class="home-table-label-input" placeholder="0.00" readonly></ion-input>
       </ion-col>
       <ion-col width-20>
         <ion-label class="home-table-label" color="primary">PLN</ion-label>
