link to images fixed

--- a/b2bcalc/src/pages/about/about.html
+++ b/b2bcalc/src/pages/about/about.html
@@ -23,7 +23,7 @@
     </ion-item>
     <ion-item>
       <ion-icon item-left>
-        <ion-img width="70dp" width="70dp" src="../../assets/img/angular.png"> </ion-img>
+        <ion-img width="70dp" width="70dp" src="assets/img/angular.png"> </ion-img>
       </ion-icon>
 
       angular 2
