VAT & TAX labels

--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -77,4 +77,19 @@
         <ion-icon name="arrow-down" style="color: red;" margin-left="15px"></ion-icon>
     </ion-col>
   </ion-row>
+
+  <div>
+    <ion-row margin-right="50px" margin-left="50px" margin-top="50px">
+      <label class="bottom-table-options-row" margin-right="15px" style="width:80px;" >VAT</label>
+      <input class="bottom-table-options-row" style="width:50px;" value="23"/>
+      <label class="bottom-table-options-row" margin-left="15px">%</label>
+    </ion-row>
+
+    <ion-row margin-right="50px" margin-left="50px">
+      <label class="bottom-table-options-row" margin-right="15px" style="width:80px;" >podatek</label>
+      <input class="bottom-table-options-row" style="width:50px;" value="18"/>
+      <label class="bottom-table-options-row" margin-left="15px">%</label>
+    </ion-row>
+  </div>
+
 </ion-content>
