options ripple effect

--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -71,10 +71,12 @@
     </ion-row>
   </div>
 
-  <ion-row style="font-size: 30px;" margin-right="50px" margin-left="50px" margin-top="50px">
+  <ion-row style="font-size: 30px;" margin-right="50px" margin-top="50px">
     <ion-col>
+      <button ion-item style="font-size: 30px;">
         OPCJE
         <ion-icon name="arrow-down" style="color: red;" margin-left="15px"></ion-icon>
+      </button>
     </ion-col>
   </ion-row>
 
