show additional options on click

--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -73,14 +73,14 @@
 
   <ion-row style="font-size: 30px;" margin-right="50px" margin-top="50px">
     <ion-col>
-      <button ion-item style="font-size: 30px;">
+      <button ion-item style="font-size: 30px;" (click)="showOptionsClick()">
         OPCJE
         <ion-icon name="arrow-down" style="color: red;" margin-left="15px"></ion-icon>
       </button>
     </ion-col>
   </ion-row>
 
-  <div>
+  <div *ngIf="detailsVisible">
     <ion-row margin-right="50px" margin-left="50px" margin-top="50px">
       <label class="bottom-table-options-row" margin-right="15px" style="width:80px;" >VAT</label>
       <input class="bottom-table-options-row" style="width:50px;" value="23"/>
