--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -73,9 +73,9 @@
 
   <ion-row style="font-size: 30px;" margin-right="50px" margin-top="50px">
     <ion-col>
-      <button ion-item style="font-size: 30px;" (click)="showOptionsClick()">
+      <button ion-item style="font-size: 30px;" (click)="showOptionsClick($event)">
         OPCJE
-        <ion-icon name="arrow-down" style="color: red;" margin-left="15px"></ion-icon>
+        <ion-icon class="arrow-options" name="arrow-down" style="color: red;" margin-left="15px"></ion-icon>
       </button>
     </ion-col>
   </ion-row>
