--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -14,7 +14,7 @@
       <ion-label class="home-table-label" color="primary">kwota BRUTTO</ion-label>
     </ion-col>
     <ion-col width-30>
-      <ion-input type="number" class="home-table-label-input" placeholder="0.00"></ion-input>
+      <ion-input type="number" (keyup)="onGrossValueChanged($event)" class="home-table-label-input" placeholder="0.00"></ion-input>
     </ion-col>
     <ion-col width-20>
       <ion-label class="home-table-label" color="primary">PLN</ion-label>
