--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -14,7 +14,7 @@
       <ion-label class="home-table-label" color="primary">kwota BRUTTO</ion-label>
     </ion-col>
     <ion-col width-30>
-      <ion-input type="number" (keyup)="onGrossValueChanged($event)" class="home-table-label-input" placeholder="0.00"></ion-input>
+      <ion-input type="number" [(ngModel)]="grossValue" (keyup)="onGrossValueChanged($event)" class="home-table-label-input" placeholder="0.00"></ion-input>
     </ion-col>
     <ion-col width-20>
       <ion-label class="home-table-label" color="primary">PLN</ion-label>
@@ -38,7 +38,7 @@
       <ion-label class="home-table-label" color="primary">VAT</ion-label>
     </ion-col>
     <ion-col width-30>
-      <ion-input class="home-table-label-input" placeholder="0.00" readonly></ion-input>
+      <ion-input class="home-table-label-input" [(ngModel)]="vatPriceValue" placeholder="0.00" readonly></ion-input>
     </ion-col>
     <ion-col width-20>
       <ion-label class="home-table-label" color="primary">PLN</ion-label>
@@ -50,7 +50,7 @@
       <ion-label class="home-table-label" color="primary">koszty</ion-label>
     </ion-col>
     <ion-col width-30>
-      <ion-input class="home-table-label-input" placeholder="0.00" readonly></ion-input>
+      <ion-input class="home-table-label-input" [(ngModel)]="costValue" placeholder="0.00" readonly></ion-input>
     </ion-col>
     <ion-col width-20>
       <ion-label class="home-table-label" color="primary">PLN</ion-label>
@@ -63,7 +63,7 @@
         <ion-label class="home-table-label" color="primary">zysk</ion-label>
       </ion-col>
       <ion-col width-30>
-        <ion-input class="home-table-label-input" placeholder="0.00" readonly></ion-input>
+        <ion-input class="home-table-label-input" [(ngModel)]="incomeFromFvatValue" placeholder="0.00" readonly></ion-input>
       </ion-col>
       <ion-col width-20>
         <ion-label class="home-table-label" color="primary">PLN</ion-label>
@@ -83,13 +83,13 @@
   <div *ngIf="detailsVisible">
     <ion-row margin-right="50px" margin-left="50px" margin-top="50px">
       <label class="bottom-table-options-row" margin-right="15px" style="width:80px;" >VAT</label>
-      <input class="bottom-table-options-row" style="width:50px;" value="23"/>
+      <input class="bottom-table-options-row" [(ngModel)]="currentVatRate" style="width:50px;" />
       <label class="bottom-table-options-row" margin-left="15px">%</label>
     </ion-row>
 
     <ion-row margin-right="50px" margin-left="50px">
       <label class="bottom-table-options-row" margin-right="15px" style="width:80px;" >podatek</label>
-      <input class="bottom-table-options-row" style="width:50px;" value="18"/>
+      <input class="bottom-table-options-row" [(ngModel)]="currentIncomeTaxRate" style="width:50px;" />
       <label class="bottom-table-options-row" margin-left="15px">%</label>
     </ion-row>
   </div>
