--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -9,7 +9,7 @@
   <h3>
     Wprowadź kwotę BRUTTO lub NETTO, aby obliczyć VAT i koszty.
   </h3>
-  <ion-row margin-right="50px" margin-left="50px">
+  <ion-row margin-right="50px" margin-left="50px" wrap>
     <ion-col width-40>
       <ion-label class="home-table-label" color="primary">kwota BRUTTO</ion-label>
     </ion-col>
@@ -22,7 +22,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-row margin-right="50px" margin-left="50px">
+  <ion-row margin-right="50px" margin-left="50px" wrap>
     <ion-col width-40>
       <ion-label class="home-table-label" color="primary">kwota NETTO</ion-label>
     </ion-col>
@@ -35,7 +35,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-row margin-right="50px" margin-left="50px">
+  <ion-row margin-right="50px" margin-left="50px" wrap>
     <ion-col width-40>
       <ion-label class="home-table-label" color="primary">VAT</ion-label>
     </ion-col>
@@ -48,7 +48,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-row margin-right="50px" margin-left="50px">
+  <ion-row margin-right="50px" margin-left="50px" wrap>
     <ion-col width-40>
       <ion-label class="home-table-label" color="primary">koszty</ion-label>
     </ion-col>
@@ -61,7 +61,7 @@
     </ion-col>
   </ion-row>
 
-  <div class="home-table-profit-row">
+  <div class="home-table-profit-row" wrap>
     <ion-row margin-right="50px" margin-left="50px">
       <ion-col width-40>
         <ion-label class="home-table-label" color="primary">zysk</ion-label>
