--- a/b2bcalc/src/pages/about/about.html
+++ b/b2bcalc/src/pages/about/about.html
@@ -18,12 +18,12 @@
   <ion-list no-border>
     <ion-list-header>Technologie:</ion-list-header>
     <ion-item>
-      <ion-icon name="ionic" item-left></ion-icon>
+      <ion-icon name="ionic" width="70dp" height="70dp" item-left></ion-icon>
       ionic framework
     </ion-item>
     <ion-item>
       <ion-icon item-left>
-        <ion-img width="70dp" width="70dp" src="assets/img/angular.png"> </ion-img>
+        <ion-img width="70dp" width="70dp" style="max-width:27px;" src="assets/img/angular.png"> </ion-img>
       </ion-icon>
 
       angular 2
