--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -80,11 +80,11 @@
 
   </ion-card>
 
-  <ion-row style="font-size: 30px;" margin-right="50px" margin-top="50px">
+  <ion-row style="font-size: 27px;" margin-right="50px" margin-top="50px">
     <ion-col>
-      <button ion-item style="font-size: 30px;" (click)="showOptionsClick($event)">
+      <button ion-item style="font-size: 27px;" (click)="showOptionsClick($event)">
         OPCJE
-        <ion-icon class="arrow-options" name="arrow-down" style="color: red;" margin-left="15px"></ion-icon>
+        <ion-icon class="arrow-options" name="arrow-down" style="color: #673AB7;" margin-left="5px"></ion-icon>
       </button>
     </ion-col>
   </ion-row>
