--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -30,7 +30,7 @@
         </ion-col>
         <ion-col width-30>
           <ion-input type="number"  type="number" ng-pattern="/^[0-9]+(\.[0-9]{1,2})?$/" step="0.01"
-                     [(ngModel)]="netValue" class="home-table-label-input" placeholder="0.00"></ion-input>
+                     [(ngModel)]="netValue" (keyup)="onNetValueChanged($event)" class="home-table-label-input" placeholder="0.00"></ion-input>
         </ion-col>
         <ion-col width-20>
           <ion-label class="home-table-label" color="primary">PLN</ion-label>
