--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -96,13 +96,15 @@
     <ion-card>
       <ion-row margin-right="50px" margin-left="50px" margin-top="50px">
         <label class="bottom-table-options-row" margin-right="15px" style="width:80px;" >VAT</label>
-        <input class="bottom-table-options-row" type="number" [(ngModel)]="currentVatRate" style="width:50px;" />
+        <input class="bottom-table-options-row" type="number" (keyup)="onVatRateChanged($event)"
+               [(ngModel)]="currentVatRate" style="width:50px;" />
         <label class="bottom-table-options-row" margin-left="15px">%</label>
       </ion-row>
 
       <ion-row margin-right="50px" margin-left="50px" margin-bottom="50px">
         <label class="bottom-table-options-row" margin-right="15px" style="width:80px;" >podatek</label>
-        <input class="bottom-table-options-row" type="number" [(ngModel)]="currentIncomeTaxRate" style="width:50px;" />
+        <input class="bottom-table-options-row" type="number" (keyup)="onIncomeTaxRateChanged($event)"
+               [(ngModel)]="currentIncomeTaxRate" style="width:50px;" />
         <label class="bottom-table-options-row" margin-left="15px">%</label>
       </ion-row>
     </ion-card>
