store values from session to session

--- a/b2bcalc/src/pages/home/home.html
+++ b/b2bcalc/src/pages/home/home.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
   <!--<h2>Welcome to Ionic!</h2>-->
-  <h3>
+  <h3 (click)="onTestClick($event)">
     Wprowadź kwotę BRUTTO lub NETTO, aby obliczyć VAT i koszty.
   </h3>
 
