--- a/b2bcalc/src/index.html
+++ b/b2bcalc/src/index.html
@@ -15,7 +15,7 @@
   <script src="cordova.js"></script>
 
   <!-- Angular-pouchdb depends on pouchdb, so this line is required in index.html -->
-  <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
+  <!--<script src="pouchdb/dist/pouchdb.min.js"></script>-->
 
   <!-- un-comment this code to enable service worker
   <script>
